# Aiice

./: .gitignore  CONTRIBUTE.md  README.md  pyproject.toml
.doc/leaderboard/: leaderboard.html  table.csv
.github/doc/: module.html.jinja2
.github/workflows/: publish-doc.yml  publish-pkg.yml  publish.yml  test.yml
baseline_model/src/model/: model_unet.py
baseline_model/src/trainer/: trainer.py
baseline_model/tests/: test_model.py
docs/assets/: leaderboard.csv
scripts/: README.md
scripts/examples/: quickstart.ipynb
scripts/examples/modules/: loader.ipynb  preprocess.ipynb
scripts/experiments/: README.md  baseline_mean.py  baseline_repeat.py  cli.py  config.py  conv2d.py  conv3d.py  convert.py  convlstm.py  utils.py
scripts/experiments/FH-Mamba/: Dockerfile  README.md
scripts/experiments/configs/: baseline_mean.yaml  baseline_repeat.yaml  conv3d.yaml  convlstm.yaml  unet.yaml
scripts/osi-saf/: data_preparation.py  download_osisaf.py  icenet_local_seas.py
src/aiice/: __init__.py  benchmark.py  constants.py  loader.py  metrics.py  preprocess.py
src/aiice/core/: __init__.py  huggingface.py  utils.py
tests/: test_benchmark.py  test_loader.py  test_metrics.py  test_preprocess.py
tests/core/: test_huggingface.py  test_utils.py
