[project]
name = "aiice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kdduha", email = "just.andrew.kd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.3.1",
    "numpy>=2.2.6",
    "pytorch-msssim>=1.0.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.isort]
profile = "black"
